Admin Assignment 1/src/force-app/main/default/objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Email_c__c</fullName>
        <label>Email__c</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_c__c</fullName>
        <label>Phone__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Training_Session_Lookup__c</fullName>
        <label>Attendee_Count</label>
        <referenceTo>Training_Session__c</referenceTo>
        <relationshipLabel>Attendee__c</relationshipLabel>
        <relationshipName>Attendee_c1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Attendee__c</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Attendee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendee__c</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Email_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>REGEX( Email_c__c , &quot;[a-zA-Z0-9]+@[a-zA-Z0-9]+.[a-zA-Z]&quot;)</errorConditionFormula>
        <errorDisplayField>Email_c__c</errorDisplayField>
        <errorMessage>Email format invalid</errorMessage>
    </validationRules>
</CustomObject>